graphql-parser/tests/snapshots/tests__parse_schema__fail_onion__unix.snap
---
source: graphql-parser/tests/tests.rs
expression: result
---
Err(
    ParseError(
        "Parse error at 1:1\nUnexpected `onion[Name]`\nExpected `schema`, `extend`, `scalar`, `type`, `interface`, `union`, `enum`, `input`, `{`, `query`, `mutation`, `subscription`, `fragment` or `directive`\n",
    ),
)
